ChangeLog
=========

Release: 1.3.2
===============================================================================
2022-04-29 Fixed a crash on Android when a phone call was detected and the
           internal phone dialog is displayed.
           Fixed the bargraph to draw the second image if there is no first
           image.

2022-04-28 Added a system volume control and a system mute control.
           Completed the selection of system sound files, single beep and
           double beep files.

2022-04-26 Added a new tab to the settings to adjust sound related settings.
           Added ring tone support to the SIP client.
           Fixed calling a phone.
           Fixed SIP states send to controller and the internal SIP phone.

2022-04-24 Completed the internal phone dialog. If internal phone is enabled
           and if it's ringing the dialog box appears.

2022-04-23 Added a new phone dialog to have an integrated small phone.
           Added a new checkbox to settings to enable an automatic internal
           phone.

2022-04-22 Completed the SIP client handling calls, except DND setting.

Release: 1.3.1
===============================================================================
2022-04-21 Added a static color table which is used in case there is no palette
           file.
           Fixed a bug in reading the palette. Now the first color is also read.
           Fixed the FTP download on Android devices.

2022-04-15 Removed Linphone from Android and replaced it by PJSIP.

2022-04-07 Removed liblinphone completely because the java part necessary for
           Android had a lot of dependencies who couldn't be resolved. I added
           PJSIP instead.

2022-04-04 Fixed the detection of the client IP address. TPanel reports now the
           correct client IP address to the AMX controller.
           Added a serial number. It consists of a date and the version number.
           The serial number is visible on the command line of the controller